# go2-track-navigation

./: LICENSE  README.md  note.md
nav2_ws/: climb_stair.py  example_simple_waypoints_junbeom.py  example_simple_waypoints_junbeom2.py  example_simple_waypoints_junbeom_1.py  executor.py  go2_move.py  go2_sport_client_jinja.py  good_stair.py  junbeom.pgm  junbeom.yaml  lidar_test.py  lowlevel.py  map0_total.py  map2_nav2_params.yaml  map3_total.py  my_map.pgm  my_map.yaml  my_map0.pgm  my_map0.yaml  my_map2.pgm  my_map2.yaml  my_map2_edit.pgm  my_map2_edit.yaml  my_map3.pgm  my_map3.yaml  my_map3_edit.pgm  my_map3_edit.yaml  my_map_0.pgm  my_map_0.yaml  my_map_edit.pgm  my_map_edit.yaml  obstacle_lidar.py  pose_estimator.py  run_localization_hardcoding0.py  run_localization_hardcoding2.py  run_nav2_sequence.py  run_nav2_sequence2.py  run_nav2_sequence_1.py  slam_params.yaml  slam_relocation_params.yaml  (+8 more)
nav2_ws/src/nav2_bringup/launch/: bringup_launch.py
nav2_ws/src/nav2_bringup/params/: nav2_params.yaml
ros2_ws/src/control/: package.xml  setup.py
ros2_ws/src/control/control/: control_manager.py  process_executor.py
ros2_ws/src/mr_msg/: CMakeLists.txt  package.xml
ros2_ws/src/obstacle_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/obstacle_pkg/models/best_openvino_model/: best.xml  metadata.yaml
ros2_ws/src/obstacle_pkg/obstacle_pkg/: avoid_go_oneshot.py  avoid_go_oneshot_close.py  avoid_go_oneshot_geometry_lidar_safe.py  avoid_go_oneshot_geometry_lidar_safe_clean.py  avoid_go_oneshot_geometry_lidar_safe_clean_different_node.py  avoid_go_oneshot_imu_lidar_safe.py  avoid_go_oneshot_move.py  avoid_go_slow.py  avoid_go_v1.py  avoid_go_v2.py
ros2_ws/src/python_sdk/: package.xml  setup.cfg  setup.py
ros2_ws/src/python_sdk/python_sdk/: go2_pub.py  go2_sport_client.py
ros2_ws/src/run_policy/: package.xml  setup.cfg  setup.py
ros2_ws/src/run_policy/run_policy/: demo_cmdvel_pub.py  process_manager_node.py  udp_bridge_node.py
ros2_ws/src/traffic_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/traffic_pkg/models/best_openvino_model/: best.xml  metadata.yaml
ros2_ws/src/traffic_pkg/models/best_saved_model/: best_full_integer_quant.tflite  best_full_integer_quant_edgetpu.tflite  best_int8.tflite  best_integer_quant.tflite  fingerprint.pb  metadata.yaml
ros2_ws/src/traffic_pkg/models/best_saved_model/variables/: variables.data-00000-of-00001  variables.index
ros2_ws/src/traffic_pkg/traffic_pkg/: avoid_go_oneshot_imu_lidar_safe.py  crosswalk.py  crosswalk_amcl_lidar_clean_finish.py  crosswalk_amcl_lidar_clean_finish_different_node.py  crosswalk_amcl_lidar_clean_finish_different_node_cleanclean.py  crosswalk_amcl_lidar_finish.py  crosswalk_slow.py  crosswalk_slow_stop_cmd.py  crosswalk_slow_stop_cmd_imu.py  crosswalk_slow_stop_cmd_lidar.py  crosswalk_tpu.py
ros2_ws/src/video_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/video_pkg/video_pkg/: frame_publisher_node.py  viewer_node.py
unitree_rl_lab/deploy/include/: cmd_buffer.h  udp_receiver.h
unitree_rl_lab/deploy/include/FSM/: State_SitDown.h
unitree_rl_lab/deploy/robots/go2/: CMakeLists.txt  main.cpp
unitree_rl_lab/deploy/robots/go2/config/: config.yaml
unitree_rl_lab/deploy/robots/go2/include/: Types.h
unitree_rl_lab/outputs/2025-08-19/21-45-27/.hydra/: hydra.yaml
unitree_rl_lab/outputs/2025-08-19/21-45-36/.hydra/: config.yaml  hydra.yaml
unitree_rl_lab/outputs/2025-08-19/21-48-17/.hydra/: hydra.yaml
unitree_rl_lab/outputs/2025-08-19/21-59-12/.hydra/: config.yaml  hydra.yaml
unitree_rl_lab/outputs/2025-08-19/22-12-43/.hydra/: hydra.yaml
unitree_rl_lab/outputs/2025-08-19/22-15-04/.hydra/: hydra.yaml
(+42 files in other folders)
