<?xml version="1.0"?>
<package format="3">
  <name>run_policy</name>
  <version>0.1.0</version>
  <description>ROS2: /cmd_vel -> UDP bridge and demo publisher.</description>

  <maintainer email="you@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
