<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traffic_pkg</name>
  <version>0.0.0</version>
  <description>Traffic light / crossing decision nodes using Unitree SDK and YOLO</description>
  <maintainer email="gyeongseok8727@gmail.com">seok</maintainer>
  <license>Apache-2.0</license>


   <!-- Build tool: pure Python package -->
  <buildtool_depend>ament_python</buildtool_depend>
  
   <!-- Runtime/build deps (ROS packages only) -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_python</depend>
  
   <!-- (Optional) If you add launch files later -->
  <!-- <exec_depend>launch</exec_depend> -->
  <!-- <exec_depend>launch_ros</exec_depend> -->

  <!-- Lint/test (optional) -->
  <!-- <test_depend>ament_lint_auto</test_depend> -->
  <!-- <test_depend>ament_lint_common</test_depend> -->
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
